feat: 使用包装类实现 Pipeline 步骤多态序列化
问题:
- XmlSerializer 不支持多态类型序列化
- Pipeline 的 steps 字段包含 LocalCommandStep, UploadStep, RemoteCommandStep

解决方案:
1. 新增 PipelineStepWrapper 类
   - 包含所有步骤类型的字段
   - 使用 type 字段标识步骤类型
   - 实现 toStep() 方法转换回具体步骤类型
   - 支持从 PipelineStep 构造包装对象

2. 修改 Pipeline 类
   - 使用 List<PipelineStepWrapper> 替代 List<PipelineStep>
   - getSteps() 方法将 wrappers 转换为步骤对象
   - setSteps() 方法将步骤对象包装后存储

3. 移除 JDOMExternalizable 接口
   - 使用 XmlSerializer 默认序列化
   - 与 ConfigPersistence 的序列化方式兼容

优势:
- 保持与旧配置文件的兼容性
- 支持 Pipeline 步骤的完整序列化
- 无需修改现有配置文件格式